--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "react": "^18.1.0",
